# dream-workroom

./: .gitignore  CMakeLists.txt  README.md  clean.bat  inspo.txt  run.bat
cmake/: ImportDependencies.cmake
models/UNC Power Plant Data Files (Bhargav)/: 4a.txt  4b.txt  5a.txt  5b.txt  5c.txt  6a.txt  6b.txt
projects/dream-incubator/include/: intersectiontests.hpp  isingleton.hpp  texture.hpp  window.hpp
projects/dream-incubator/include/components/: boundingvolume.hpp  camera.hpp  light.hpp  renderable.hpp
projects/dream-incubator/include/cs350/: kdtree.hpp
projects/dream-incubator/include/graphics/: shader.hpp
projects/dream-incubator/include/gui/: octkdtreegui.hpp  scenehierarchygui.hpp  viewportgui.hpp
projects/dream-incubator/src/: ecs.cpp  kdtree.cpp  main.cpp  shader.cpp  window.cpp
projects/dream-incubator/src/cs350/: bvhierarchy.cpp  intersectiontests.cpp  kdtree.cpp  octree.cpp
projects/dream-incubator/src/graphics/: shader.cpp
projects/dream-incubator/src/gui/: bvhgui.cpp  gui.cpp  iguiwindow.cpp  octkdtreegui.cpp  scenehierarchygui.cpp  viewportgui.cpp
projects/dream-incubator/src/systems/: collision.cpp  movement.cpp  render.cpp
projects/weizhen.tan-project-1/: README.txt
projects/weizhen.tan-project-1/include/: buffer.hpp  intersectiontests.hpp
projects/weizhen.tan-project-1/include/components/: boundingvolume.hpp  camera.hpp  material.hpp  renderable.hpp  transform.hpp
projects/weizhen.tan-project-1/include/gui/: gui.hpp  inspectorgui.hpp  scenehierarchygui.hpp
projects/weizhen.tan-project-1/include/systems/: collision.hpp  movement.hpp
projects/weizhen.tan-project-1/src/: bvhierarchy.cpp  intersectiontests.cpp  main.cpp
projects/weizhen.tan-project-1/src/gui/: bvhgui.cpp  gui.cpp  inspectorgui.cpp  (+1 more)
projects/weizhen.tan-project-2/: README.txt
projects/weizhen.tan-project-2/include/: bvhierarchy.hpp  ecs.hpp  math.hpp
projects/weizhen.tan-project-2/src/: bvhierarchy.cpp  main.cpp
projects/weizhen.tan-project-3/: README.txt
projects/weizhen.tan-project-3/include/: buffer.hpp  bvhierarchy.hpp  ecs.hpp  input.hpp  intersectiontests.hpp  window.hpp
projects/weizhen.tan-project-3/shaders/: ColorFragmentShader.frag  ColorVertexShader.vert
projects/weizhen.tan-project-3/src/: bvhierarchy.cpp  ecs.cpp  intersectiontests.cpp  main.cpp  window.cpp
projects/weizhen.tan-project-4/: README.txt
projects/weizhen.tan-project-4/include/: input.hpp  kdtree.hpp  octree.hpp
projects/weizhen.tan-project-4/shaders/: ColorFragmentShader.frag
projects/weizhen.tan-project-4/src/: bvhierarchy.cpp  intersectiontests.cpp  octree.cpp
(+38 files in other folders)
